--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 
 
 <body>
-    <div class="header container text-center">
-        <h1 class="text-warning"><strong>Lure's Gallery</strong></h1>
-        <p class="lead">View the world from my prespective</p>
+    <div class="header container-fluid text-center">
+        <h2 class="text-success">
+            <strong>Lure's Gallery</strong>
+        </h2>
+        <p>View the world from my prespective</p>
     </div>
 
-
-    <div class="navbar navbar-default">
+    <div class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    Menu
+                    <span style="color: #fff" class="glyphicon glyphicon-menu-hamburger"></span>
                 </button>
             </div>
             <div class="navbar-collapse collapse">
@@ -38,11 +39,16 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <h2>Welcome to Lure's Gallery</h2>
-        <p>Look into Kaushal's prespective.</p>
+    <div class="bg-welcome text-center">
+        <div class="container">
+            <h1 style="color:#fff">
+                <strong>Welcome to Lure's Photo Gallery.</strong>
+            </h1>
+        </div>
     </div>
-    </body>
-    <script src="js/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+</body>
+<script src="js/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </html>
