--- a/contactus.html
+++ b/contactus.html
@@ -39,11 +39,11 @@
             </div>
         </div>
     </div>
-
+<!-- BOotstrap field  -->
     <div class="container">
         <h2>Contact Us</h2>
         <form method="post" action="#">
-            <div class="form-group-inline">
+            <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" id="firstName" placeholder="First Name" name="firstName">
                 <input type="text" id="lastName" placeholder="Last Name" name="lastName">
